--- a/src/frontend/src/components/Ctf/ctf.css
+++ b/src/frontend/src/components/Ctf/ctf.css
@@ -1,7 +1,13 @@
 .ctf-wrapper {
   display: grid;
   margin-top: 5%;
-  animation: slide-in 0.5s ease-out forwards;
+  animation: slide-in 0.3s ease-out forwards;
+
+  /* Making the CTF background large */
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0.55;
+  border-radius: 12px;
+  height: 75vh;
 }
 
 .ctf-input {
