--- a/src/frontend/src/components/Ctf/ctf.css
+++ b/src/frontend/src/components/Ctf/ctf.css
@@ -1,18 +1,21 @@
-.ctf-wrapper {
-    display: grid;
-    margin-top: 5%;
-    animation: slide-in 0.3s ease-out forwards;
-
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 12px;
-    height: 75vh;
-}
-
 .ctf-input {
-    height: 35px;
+    display: block;
+    margin: auto;
+    padding: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
     text-align: center;
     color: white;
     font-family: "Press Start 2p";
     border-radius: 8px;
     background-color: #000000;
+}
+
+.ctf-button {
+    display: block;
+    margin: auto;
+    padding: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    width: 100%;
 }
