--- a/src/frontend/src/components/Ctf/ctf.css
+++ b/src/frontend/src/components/Ctf/ctf.css
@@ -27,5 +27,9 @@
 
 .instructions {
   border-top: 3px solid black;
-  padding-top: 1.5vh;
+  padding-top: 2.5%;
+}
+
+.ctf-input-wrapper {
+  padding: 16px 32px;
 }
