--- a/src/frontend/src/components/Ctf/ctf.css
+++ b/src/frontend/src/components/Ctf/ctf.css
@@ -7,7 +7,7 @@
     text-align: center;
     color: white;
     font-family: "Press Start 2p";
-    border-radius: 8px;
+    border-radius: 0.5em;
     background-color: #000000;
 }
 
